# PRSIM

./: .gitignore  README.md  meson.build  meson_options.txt
.serena/: project.yml
doc/design/: README.md  app-facade.md  components.md  delegates-and-sentinels.md  draw-list.md  dynamic-node-tree.md  input-events.md  proxy-widget.md  reactivity.md  render-backend.md  scene-snapshot.md  stdexec-integration.md  styling.md  threading-model.md  widget-model.md  widgets-and-sentinels.md
docs/superpowers/plans/: 2026-03-26-poc-colored-rectangle.md  2026-03-27-backend-interface.md  2026-03-27-delegate-dispatch.md  2026-03-27-field-sender-widget.md  2026-03-27-input-routing.md  2026-03-27-layout-hit-regions.md  2026-03-27-ui-state-minimal.md  2026-03-27-update-callback.md  2026-03-28-checkbox.md  2026-03-28-dropdown.md  2026-03-28-keyboard-focus.md  2026-03-28-password-field.md  2026-03-28-sdl-renderer-migration.md  2026-03-28-text-field.md  2026-03-29-canvas-escape-hatch.md  2026-03-29-clip-local-coords.md  2026-03-29-node-tree-pre-cpp26.md  2026-03-29-scroll-area.md  2026-03-29-strong-types.md  2026-03-29-text-area.md  2026-03-29-view-override.md  2026-03-29-virtual-list.md  2026-03-30-animation-system.md  2026-03-31-tab-widget.md  2026-03-31-table-widget.md  2026-04-01-svg-export-draw-commands.md  2026-04-01-theme-palette.md  2026-04-01-window-abstraction.md  2026-04-02-codebase-reorganization.md  2026-04-02-plot-widget.md  2026-04-04-transaction-api.md  2026-04-11-custom-widget-from-type.md  2026-04-11-state-taxonomy.md  2026-07-14-live-object-inspector.md  2026-07-15-inspector-field-annotations.md  2026-07-16-dual-window-event-loop.md  2026-07-16-live-tree-inspector.md  2026-07-16-virtual-list-row-interactivity.md  2026-07-17-tree-inspector-detail-panel-autoscroll.md  2026-07-20-tree-widget.md  (+5 more)
docs/superpowers/specs/: 2026-03-27-backend-interface-design.md  2026-03-27-field-sender-widget-design.md  2026-03-27-input-routing-design.md  2026-03-27-layout-hit-regions-design.md  2026-03-27-ui-state-minimal-design.md  2026-03-27-update-callback-design.md  2026-03-28-checkbox-design.md  2026-03-28-dropdown-design.md  2026-03-28-keyboard-focus-design.md  2026-03-28-password-field-design.md  2026-03-28-sdl-renderer-migration-design.md  2026-03-28-text-field-design.md  2026-03-29-canvas-escape-hatch-design.md  2026-03-29-clip-local-coords-design.md  2026-03-29-node-tree-pre-cpp26-design.md  2026-03-29-scroll-area-design.md  2026-03-29-strong-types-design.md  2026-03-29-text-area-design.md  2026-03-29-view-override-design.md  2026-03-29-virtual-list-design.md  2026-03-30-animation-system-design.md  2026-03-31-tab-widget-design.md  2026-03-31-table-widget-design.md  2026-04-01-plot-widget-design.md  2026-04-01-svg-export-draw-commands-design.md  2026-04-01-theme-palette-design.md  2026-04-01-window-abstraction-design.md  2026-04-02-codebase-reorganization-design.md  2026-04-02-showcase-svg-screenshots-design.md  2026-04-04-transaction-api-design.md  2026-04-11-custom-widget-from-type-design.md  2026-04-11-state-taxonomy-design.md  2026-07-14-live-object-inspector-design.md  2026-07-15-inspector-field-annotations-design.md  2026-07-15-live-tree-inspector-design.md  2026-07-16-dual-window-event-loop-design.md  2026-07-16-virtual-list-row-interactivity-design.md  2026-07-17-tree-inspector-detail-panel-autoscroll-design.md  2026-07-20-tree-widget-design.md  2026-07-21-resizable-split-panes-design.md  (+4 more)
examples/: README.md  hello_rect.cpp  meson.build  model_dashboard.cpp  model_plot.cpp  model_system_monitor.cpp  model_tree_browser.cpp  proc_metrics.hpp
examples/hello_rect/: README.md  hello_rect.cpp  meson.build
examples/model_dashboard/: README.md  meson.build  model_dashboard.cpp
examples/model_plot/: README.md  meson.build  model_plot.cpp
examples/model_system_monitor/: README.md  meson.build  model_system_monitor.cpp  process_tree_source.hpp
examples/model_tree_browser/: README.md  file_tree_source.hpp  meson.build  model_tree_browser.cpp
examples/showcase/: meson.build  showcase_canvas.cpp  showcase_common.hpp  showcase_counter.cpp  showcase_inspector.cpp  showcase_layout.cpp  showcase_plot.cpp  showcase_slider.cpp  showcase_table.cpp  showcase_tabs.cpp  showcase_tree.cpp
include/prism/: prism.hpp
include/prism/app/: app.hpp  backend.hpp  capturing_backend.hpp  event_routing.hpp  headless_window.hpp  model_app.hpp  null_backend.hpp  test_backend.hpp  ui.hpp  widget_tree.hpp  window.hpp  window_registry.hpp
include/prism/backends/: sdl_window.hpp  software_backend.hpp
include/prism/core/: animation.hpp  app.hpp  atomic_cell.hpp  backend.hpp  connection.hpp  context.hpp  delegate.hpp  derived.hpp  draw_list.hpp  dropdown_delegates.hpp  exec.hpp  field.hpp  fixed_string.hpp  hit_test.hpp  input_event.hpp  layout.hpp  list.hpp  model_app.hpp  mpsc_queue.hpp  node.hpp  null_backend.hpp  on.hpp  pixel_buffer.hpp  reflect.hpp  reflect_annotations.hpp  reflect_leaf.hpp  render_loop.hpp  scene_snapshot.hpp  shared.hpp  software_renderer.hpp  (+14 more)
scripts/: update_screenshots.sh
src/: backend.cpp  meson.build  prism.cpp
src/backends/: sdl_window.cpp  software_backend.cpp
subprojects/: magic_enum.wrap  sdl3.wrap  stdexec.wrap
tests/: meson.build  test_animation.cpp  test_app.cpp  test_atomic_cell.cpp  test_connection.cpp  test_cursor.cpp  test_debug_name.cpp  test_delegate.cpp  test_derived.cpp  test_draw_list.cpp  test_dropdown.cpp  test_exec.cpp  test_field.cpp  test_field_mirror.cpp  test_file_tree_source.cpp  test_fixed_string.cpp  test_flatten_tree.cpp  test_hit_test.cpp  test_input_event.cpp  test_inspector.cpp  test_layout.cpp  test_list.cpp  test_model_app.cpp  test_model_app_chrome_cursor.cpp  test_mpsc_queue.cpp  test_nested_scroll_bubble.cpp  test_node.cpp  test_null_backend.cpp  test_password.cpp  test_pixel_buffer.cpp  test_plot.cpp  test_proc_metrics.cpp  test_process_tree_source.cpp  test_reflect.cpp  test_scroll.cpp  test_sdl_window.cpp  test_shared.cpp  test_software_backend_chrome_cursor.cpp  test_software_backend_request_window.cpp  test_software_renderer.cpp  (+28 more)
(+44 files in other folders)
