executable('hello_rect', 'hello_rect.cpp',
  dependencies : [prism_dep],
)

executable('model_dashboard', 'model_dashboard.cpp',
  dependencies : [prism_dep],
)

executable('model_plot', 'model_plot.cpp',
  dependencies : [prism_dep],
)

executable('model_tree_browser', 'model_tree_browser.cpp',
  dependencies : [prism_dep],
)

subdir('showcase')
